# zone-plate-generator

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  azure-container-app.yaml  deploy-azure.ps1  deploy-azure.sh  dev.py  pyproject.toml  test-css.html  zone_plate_gen.ps
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
postscript/: zone_plate_gen.ps
src/postscript/: zone_plate_args.ps  zone_plate_gen.ps
src/zone_plate_ui/: __init__.py  app.py
src/zone_plate_ui/config/: __init__.py  config.py
src/zone_plate_ui/controllers/: __init__.py  errors.py  main.py
src/zone_plate_ui/models/: __init__.py  zone_plate.py
src/zone_plate_ui/static/css/: style.css
src/zone_plate_ui/templates/: base.html  error.html  index.html
tests/: test_app.py
