[tool.poetry]
name = "zone-plate-generator"
version = "0.1.0"
description = "Modern Python web UI for generating zone plates using PostScript"
authors = ["David Pitcher"]
license = "MIT"
readme = "README.md"
packages = [{include = "zone_plate_ui", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.3"
flask = "^3.0.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zone-plate-ui = "zone_plate_ui.app:main"
